fix background color of collapsed sidebar

--- a/src/renderer/features/sidebar/components/collapsed-sidebar.module.css
+++ b/src/renderer/features/sidebar/components/collapsed-sidebar.module.css
@@ -4,7 +4,6 @@
     height: 100%;
     max-height: calc(100vh - 119px);
     user-select: none;
-    background: var(--theme-colors-background-alternate);
 }
 
 .sidebar-container.web,
